<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FLEXICHAT</string>
    <string name="hello_world">Hello world!</string>
    <string name="dev_map_key">AIzaSyBNmh91RRn0hPNFNajb9HFJOpRIMw54fgM</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>

    <!-- Cistom view text -->
    <string name="app">AnyTextView</string>
    <string name="typeface_not_found">Typeface %s not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="assets_fonts_folder">fonts/</string>

    <!-- Header Title -->
    <string name="claim_your_business">Claim Your Business</string>
    <string name="find_your_business">Find Your Business</string>
    <string name="sign_up">Sign Up</string>
    <string name="settings">Settings</string>

    <!-- Claim Your Business -->

    <string name="not_in_list">Not in the list?</string>
    <string name="addyour_business_now">Add your business details now</string>

    <!-- Settings -->
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="notification_sound">Notification Sound On</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="faq">FAQ</string>

    
    <string name="msg_connect_network">Please connect network</string>
    <string name="something">Something went wrong! Please try again.</string>
    <!--  -->
    <string name="demo_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eget lobortis leo. Phasellus tincidunt sem id dui feugiat elementum.</string>

    <!-- API parameter veriables -->
    <string name="api_access">access</string>
    <string name="api_ApiKey">ApiKey</string>
    <string name="api_DeviceId">DeviceId</string>
    <string name="api_RequestCode">RequestCode</string>
    <string name="api_Message">Message</string>
    <string name="api_ResponseData">ResponseData</string>
    
    <string name="api_FName">FName</string>
    <string name="api_LName">LName</string>
    <string name="api_PhoneNo">PhoneNo</string>
    <string name="api_Latitude">Latitude</string>
    <string name="api_Longitude">Longitude</string>
    <string name="api_UserId">UserId</string>
    <string name="api_Name">Name</string>
    <string name="api_verified">verified</string>
    
    <string name="api_vender">vender</string>
    <string name="api_venderInfo">venderInfo</string>
    <string name="api_Addres">Addres</string>
    <string name="api_PlaceId">PlaceId</string>
    <string name="api_type">type</string>
    
    
    
    

</resources>