<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_business"
    android:orientation="vertical" >

    <include
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_panel" />

    <TextView
        android:id="@+id/txt_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_info"
        android:drawablePadding="@dimen/view_size_5"
        android:padding="@dimen/view_size_5"
        android:text="@string/about"
        android:textSize="@dimen/txt_size_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_1"
        android:layout_margin="@dimen/view_size_5"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_info"
        android:drawablePadding="@dimen/view_size_5"
        android:padding="@dimen/view_size_5"
        android:text="@string/profile"
        android:textSize="@dimen/txt_size_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_1"
        android:layout_margin="@dimen/view_size_5"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_notification_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_music"
        android:drawablePadding="@dimen/view_size_5"
        android:padding="@dimen/view_size_5"
        android:text="@string/notification_sound"
        android:textSize="@dimen/txt_size_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_1"
        android:layout_margin="@dimen/view_size_5"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_claim_your_business"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_marker"
        android:drawablePadding="@dimen/view_size_5"
        android:padding="@dimen/view_size_5"
        android:text="@string/claim_your_business"
        android:textSize="@dimen/txt_size_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_1"
        android:layout_margin="@dimen/view_size_5"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_send_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_paper_plane"
        android:drawablePadding="@dimen/view_size_5"
        android:padding="@dimen/view_size_5"
        android:text="@string/send_feedback"
        android:textSize="@dimen/txt_size_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_1"
        android:layout_margin="@dimen/view_size_5"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_rate_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_star"
        android:drawablePadding="@dimen/view_size_5"
        android:padding="@dimen/view_size_5"
        android:text="@string/rate_us"
        android:textSize="@dimen/txt_size_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_1"
        android:layout_margin="@dimen/view_size_5"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_qsf"
        android:drawablePadding="@dimen/view_size_5"
        android:padding="@dimen/view_size_5"
        android:text="@string/faq"
        android:textSize="@dimen/txt_size_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_1"
        android:layout_margin="@dimen/view_size_5"
        android:background="@android:color/darker_gray" />

</LinearLayout>